--- a/ratings/templates/ratings/index.html
+++ b/ratings/templates/ratings/index.html
@@ -1,7 +1,7 @@
 {% if all_movies_list %}
     <ul>
     {% for movie in all_movies_list %}
-        <li><a href="/ratings/{{ movie }}/">{{movie}}</a></li>
+        <li><a href="/ratings/{{movie.1}}/">{{movie.0}}</a></li>
     {% endfor %}
     </ul>
 {% else %}
