--- a/ratings/templates/ratings/index.html
+++ b/ratings/templates/ratings/index.html
@@ -1,2 +1,9 @@
-<a href="/ratings/categories/">Movie Categories</a>
-<a href="/ratings/movies/">All Movies</a>
+{% extends 'ratingsbase.html' %}
+
+{% block content %}
+	<main role="main">
+		<h1><a href="/categories/">Movie Categories</a></h1>
+		<h1><a href="/movies/">All Movies</a></h1>
+	</main>
+{% endblock %}
+
