--- a/ratings/templates/ratings/category.html
+++ b/ratings/templates/ratings/category.html
@@ -1,10 +1,14 @@
-<h1>Top 100 {{category}} Movies</h1>
-{% if movies_list %}
-    <ul>
-    {% for movie in movies_list %}
-        <li><a href="/ratings/{{movie.1}}/">{{movie.0}}: {{movie.2}}</a></li>
-    {% endfor %}
-    </ul>
-{% else %}
-    <p>No categories are available.</p>
-{% endif %}
+{% extends 'ratingsbase.html' %}
+
+{% block content %}
+	<h1>Top 100 {{category}} Movies</h1>
+	{% if movies_list %}
+	    <ul>
+	    {% for movie in movies_list %}
+	        <li><a href="/movies/{{movie.1}}/">{{movie.0}}: {{movie.2}}</a></li>
+	    {% endfor %}
+	    </ul>
+	{% else %}
+	    <p>No categories are available.</p>
+	{% endif %}
+{% endblock %}
