--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,7 +1,27 @@
 <!-- templates/registration/login.html -->
-<h2>Login</h2>
-<form method="post">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <button type="submit">Login</button>
-</form>
+{% extends 'base.html' %}
+
+{% block extendhead %}
+{% load static %}
+<link rel="stylesheet" href="{% static "accounts/loginform.css" %}">
+{% endblock %}
+
+{% block title %}Login
+{% endblock %}
+
+{% block content %}
+	<form class="form-signin" method="post">
+		<h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+		{% csrf_token %}
+		{{ form.non_field_errors }}
+		<div class="fieldWrapper">
+		    {{ form.username.errors }}
+			<input id="username" type="text" name="username" class="form-control" placeholder="Username" required autofocus>
+		</div>
+		<div class="fieldWrapper">
+		    {{ form.password.errors }}
+			<input id="password" type="password" name="password" class="form-control" placeholder="Password" required>
+		</div>
+		<button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+	</form>
+{% endblock %}
