--- a/ratings/templates/ratingsbase.html
+++ b/ratings/templates/ratingsbase.html
@@ -20,7 +20,7 @@
 		</form>
 	    <ul class="navbar-nav px-3">
 		    <li class="nav-item text-nowrap">
-			    <a class="nav-link" href="accounts/logout">Sign out</a>
+			    <a class="nav-link" href="admin/logout">Sign out</a>
 		    </li>
 	    </ul>
 	</nav>
