--- a/movie_ratings/templates/movie_ratings/index.html
+++ b/movie_ratings/templates/movie_ratings/index.html
@@ -3,7 +3,19 @@
 {% block content %}
 	<h1><a href="/categories/">Movie Categories</a></h1>
 	<h1><a href="/movies/">All Movies</a></h1>
-	<h1>You might like...</h1>
+	<h1>Based on movies you like, you might like...</h1>
+	<div class="row mb-3">
+	    {% for movie in similar_movies %}
+		    {% if movie.3 %}
+			    </div>
+			    <div class="row mb-3">
+		    {% endif %}
+		    <div class="col-4 movie-grid-col">
+	            <a href="/movies/{{movie.2}}/">{{movie.0}}</a>
+		    </div>
+	    {% endfor %}
+	</div>
+	<h1>Users who liked movies that you liked also like...</h1>
 	<div class="row mb-3">
 	    {% for movie in predictions %}
 		    {% if movie.3 %}
@@ -12,6 +24,19 @@
 		    {% endif %}
 		    <div class="col-4 movie-grid-col">
 	            <a href="/movies/{{movie.2}}/">{{movie.0}}</a>
+		    </div>
+	    {% endfor %}
+	</div>
+	<h1>Your rated movies</h1>
+	<div class="row mb-3">
+	    {% for movie in ratings %}
+		    {% if movie.3 %}
+			    </div>
+			    <div class="row mb-3">
+		    {% endif %}
+		    <div class="col-4 movie-grid-col">
+	            <a href="/movies/{{movie.2}}/">{{movie.0}}</a>
+			    <p>{{movie.1}}</p>
 		    </div>
 	    {% endfor %}
 	</div>
