--- a/movie_ratings/templates/movie_ratings/categories.html
+++ b/movie_ratings/templates/movie_ratings/categories.html
@@ -1,6 +1,11 @@
 {% extends 'ratingsbase.html' %}
 
 {% block content %}
+<style>
+	ul {
+	  list-style-type: none;
+	}
+</style>
 	<h1>Categories</h1>
 	{% if categories_list %}
 	    <ul>
