--- a/movie_ratings/templates/movie_ratings/index.html
+++ b/movie_ratings/templates/movie_ratings/index.html
@@ -1,6 +1,11 @@
 {% extends 'ratingsbase.html' %}
 
 {% block content %}
+<style>
+	h1 {
+		font-family: Arial, Helvetica, sans-serif;
+	}
+</style>
 	<h1><a href="/categories/">Movie Categories</a></h1>
 	<h1><a href="/movies/">All Movies</a></h1>
 	<h1>Based on movies you like, you might like...</h1>
@@ -16,14 +21,14 @@
 	    {% endfor %}
 	</div>
 	<h1>Users who liked movies that you liked also like...</h1>
-	<div class="row mb-3">
+	<div class="row justify-content-around mb-3">
 	    {% for movie in predictions %}
 		    {% if movie.3 %}
 			    </div>
-			    <div class="row mb-3">
+			    <div class="row justify-content-around mb-3">
 		    {% endif %}
-		    <div class="col-4 movie-grid-col">
-	            <a href="/movies/{{movie.2}}/">{{movie.0}}</a>
+		    <div class="col-2 movie-grid-col">
+	            <h4><a href="/movies/{{movie.2}}/">{{movie.0}}</a></h4>
 		    </div>
 	    {% endfor %}
 	</div>
@@ -32,11 +37,11 @@
 	    {% for movie in ratings %}
 		    {% if movie.3 %}
 			    </div>
-			    <div class="row mb-3">
+			    <div class="row justify-content-around mb-3">
 		    {% endif %}
-		    <div class="col-4 movie-grid-col">
-	            <a href="/movies/{{movie.2}}/">{{movie.0}}</a>
-			    <p>{{movie.1}}</p>
+		    <div class="col-2 movie-grid-col">
+	            <h4><a href="/movies/{{movie.2}}/">{{movie.0}}</a></h4>
+			    <h5>Rating: {{movie.1}}</h5>
 		    </div>
 	    {% endfor %}
 	</div>
