--- a/movie_ratings/templates/movie_ratings/category.html
+++ b/movie_ratings/templates/movie_ratings/category.html
@@ -1,6 +1,11 @@
 {% extends 'ratingsbase.html' %}
 
 {% block content %}
+<style>
+	ul {
+	  list-style-type: none;
+	}
+</style>
 	<h1>Top 100 {{category}} Movies</h1>
 	{% if movies_list %}
 	    <ul>
