--- a/movie_ratings/templates/movie_ratings/movies.html
+++ b/movie_ratings/templates/movie_ratings/movies.html
@@ -1,13 +1,21 @@
 {% extends 'ratingsbase.html' %}
 
 {% block content %}
+<style>
+	ul {
+	  list-style-type: none;
+	  font-size: medium;
+	}
+</style>
 	<h1>All Movies</h1>
 	{% if all_movies_list %}
-	    <ul>
-	    {% for movie in all_movies_list %}
-	        <li><a href="{{movie.1}}/">{{movie.0}}</a></li>
-	    {% endfor %}
-	    </ul>
+		<div class="listColumns">
+			<ul>
+			{% for movie in all_movies_list %}
+				<li><a href="{{movie.1}}/">{{movie.0}}</a></li>
+			{% endfor %}
+			</ul>
+		</div>
 	{% else %}
 	    <p>No movies are available.</p>
 	{% endif %}
