--- a/movie_ratings/templates/movie_ratings/category.html
+++ b/movie_ratings/templates/movie_ratings/category.html
@@ -8,11 +8,13 @@
 </style>
 	<h1>Top 100 {{category}} Movies</h1>
 	{% if movies_list %}
-	    <ul>
-	    {% for movie in movies_list %}
-	        <li><a href="/movies/{{movie.1}}/">{{movie.0}}: {{movie.2}}</a></li>
-	    {% endfor %}
-	    </ul>
+		<div class="listColumns">
+			<ul>
+			{% for movie in movies_list %}
+				<li><a href="/movies/{{movie.1}}/">{{movie.0}}: {{movie.2}}</a></li>
+			{% endfor %}
+			</ul>
+		</div>
 	{% else %}
 	    <p>No categories are available.</p>
 	{% endif %}
