--- a/movie_ratings/templates/ratingsbase.html
+++ b/movie_ratings/templates/ratingsbase.html
@@ -12,7 +12,8 @@
 </head>
 <body>
 	<nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
-		<a class="navbar-brand col-sm-3 col-md-2 mr-0" href="/">Home</a>
+		<a class="navbar-brand col-sm-2 col-md-1 mr-0" href="/">Home</a>
+		<a class="col-sm-2 col-md-1 mr-0" href="/movies">Movies</a>
 		<form action="{% url 'movies' %}" method="get" class="w-100">
 		    {% if search_placeholder %}
 				<input class="form-control form-control-dark w-100" type="text" name="q" value="{{search_placeholder}}" aria-label="Search">
