--- a/static/movie_ratings/movie_ratings.css
+++ b/static/movie_ratings/movie_ratings.css
@@ -109,12 +109,15 @@ body {
 .movie-grid-col {
   height: 150px;
   width: 100px;
-  background-color: rgba(0, 0, 0, .2);
+  background-color: rgba(52, 191, 255, 0.445);
   border-radius: 5px;
   text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 20px;
+  overflow: hidden;
 }
 .movie-grid-col h4 {
-  height: 100%;
+  height: 75%;
 }
 
 .movie-grid-col a {
@@ -127,3 +130,11 @@ input:checked + span{
   color: #FDE16D;
 }
 
+.rankingForm {
+  margin: 0px 25px 50px;
+}
+
+.listColumns {
+  column-count: 3;
+  column-gap: 40px;
+}
