--- a/movie_ratings/templates/ratingsbase.html
+++ b/movie_ratings/templates/ratingsbase.html
@@ -29,8 +29,10 @@
 	</nav>
 	<div class="container-fluid">
 		<main role="main">
-			{% block content %}
-			{% endblock %}
+			<div class="container mt-3">
+				{% block content %}
+				{% endblock %}
+			</div>
 		</main>
 	</div>
 </body>
